--- a/client/src/intro.css
+++ b/client/src/intro.css
@@ -125,7 +125,7 @@
       font-family: sans-serif;
     }
     .black-fade {
-      background: url("https://portaldefi.com/assets/black-fade") repeat-x center;
+      background: url("./images/black-fade.jpg") repeat-x center;
       background-size: auto 100%;
       height: 160px;
       width: 100%;
