--- a/client/src/priceprediction.css
+++ b/client/src/priceprediction.css
@@ -56,7 +56,7 @@
       font-family: sans-serif;
     }
     .black-fade {
-      background: url("https://portaldefi.com/assets/black-fade") repeat-x center;
+      background: url("./images/black-fade.jpg") repeat-x center;
       background-size: auto 100%;
       height: 160px;
       width: 100%;
@@ -102,7 +102,7 @@
       display: inline-block;
     }
     .section.price-predictions {
-      background: url(https://portaldefi.com/assets/background-price-predictions.jpg)
+      background: url("./images/background-price-predictions.jpg")
         center no-repeat #01161e;
       background-size: cover;
       height: 100vh;
@@ -160,7 +160,7 @@
         text-align: center;
       }
       .section.price-predictions {
-        background: url(https://portaldefi.com/assets/background-price-predictions-mobile.jpg)
+        background: url("./images/background-price-predictions-mobile.jpg")
           top no-repeat #081119;
         background-size: cover;
         text-align: center;
